# LiteSlate

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.py  liteslate.py  pyproject.toml  requirements.txt
src/liteslate/: __init__.py  __main__.py  app.py
